Wed Aug 08 13:21:41 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Fix issue with new match estimate
	  rounding when match estimate is 0.

Wed Aug 08 03:17:37 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Improve documentation comment.

Wed Aug 08 03:13:10 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Add "matches_human_readable_estimate"
	  to search results - returns an estimate of the number of matching
	  documents, rounded according to how tight the upper and lower
	  bounds are.

Sat Aug 04 08:16:01 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Add convenience methods for checking
	  if a particular field can be collapsed or sorted on.

Sat Aug 04 03:09:32 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst,secore/: Reorganise field structures,
	  allowing us to support multiple occurrences of facets of string
	  type for a single document.  This change requires all databases
	  to be rebuilt.  Tests updated accoringly.  Also, requires latest
	  SVN HEAD build of xapian.

Wed Aug 01 14:45:41 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection_doctest2.txt: Test for multiple facet
	  values in a single document (currently fails, due to this not
	  being supported correctly yet)

Wed Aug 01 14:23:24 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection_doctest2.txt: More tests, including a
	  regression test for bug with facet calculation on database with
	  no facet fields defined.

Wed Aug 01 12:43:57 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection_doctest2.txt: Improve test coverage.

Wed Aug 01 12:28:48 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* secore/searchconnection.py: Fix bug when facet calculation is