@@ -1,3 +1,10 @@
+Wed Aug 08 13:37:26 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* secore/searchconnection.py: Fix up calculation of significant
+	  digits to cope with extreme values (ie, 0), to round to the
+	  nearest significant digit (previously, it rounded down), and to
+	  use math.log10 instead of a loop to calculate the logarithm.
+
 Wed Aug 08 13:21:41 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* secore/searchconnection.py: Fix issue with new match estimate
